# auth-service

./: .continueignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  architecture.drawio  component_stock_exchange_diagram.drawio  container_stock_exchange_diagram.drawio  context_stock_chart.drawio  docker-compose.yml  Диаграмма без названия.drawio
StockExchange/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
StockExchange/UserGateway/: context_stock_chart.drawio  usergateway.cpp  usergateway.h
StockExchange/UserPages/: LoginPage.qml  RegisterPage.qml  Testpage.qml
StockExchange/Verification/: verificationcontroller.cpp  verificationcontroller.h
database_files/: person-odb.cxx  person-odb.hxx  person-odb.ixx  person.sql  persons-odb.cxx  persons-odb.hxx  persons-odb.ixx  persons.sql
src/: -.s  AuthService.cpp  StockExchange.cpp  User.hpp  cert.csr  key.pem  main.cpp  person-odb.cxx  person-odb.hxx  person-odb.ixx  person.hxx  person.sql
src/models/: person.hxx
src/repositories/: IPersonRepository.hpp  PersonRepository.hpp
src/services/: AuthService.hpp  IAuthService.hpp
tests/: AuthServiceTests.hpp  authorization_test.py  gTest.cpp
tests/GoogleTests/: MockPersonRepository.hpp  gTest.cpp
tests/PythonTests/: conftest.py
